--- a/index.html
+++ b/index.html
@@ -6,42 +6,44 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-<div id="header">
-    <h1>Broadway Design</h1></br>
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Work</a></li>
-        <li><a href="#">Team</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-  </div>
-    <h2>Our Process</h2></br>
-    <img src="./resources/images/identify.svg"></br>
-    <h3>Identify</h3>
-    <p>We focus on the most important details.</p>
-    <img src="./resources/images/understand.svg"></br>
-    <h3>Understand</h3>
-    <p>We study our projects inside and out.</p>
-    <img src="./resources/images/execute.svg"></br>
-    <h3>Execute</h3>
-    <p>We put everything we have into our work.</p>
+    <div id="header">
+      <h1 class="header">Broadway Design</h1></br>
+      <div id="topNav">
+        <ul class="mainlist">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Work</a></li>
+            <li><a href="#">Team</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+      </div>
+    </div>
+    <div class="mainbody">
+      <h2>Our Process</h2></br>
+      <img src="./resources/images/identify.svg" alt="swiggly line"></br>
+      <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
+      <img src="./resources/images/understand.svg" alt="circle with arrows"></br>
+      <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
+      <img src="./resources/images/execute.svg" alt="arrow pointing right"></br>
+      <h3>Execute</h3>
+      <p>We put everything we have into our work.</p>
+    </div>
     <div id="subheader">
-      <h3>Designed in New York</h3>
+      <h3 class="maincolor">Designed in New York</h3>
     </div>
-    <h3>Portfolio</h3>
-    <p>Coming Soon</p>
-    <h3>Team</h3>
-    <p>We're Hiring!</p>
-    <h3>Contact</h3>
-    <p>Phone: (555)-555-5555 </br></br>Email: test@example.com </br></br>Twitter: @test</p>
-    <div id=footer_copy>
-      <p>©Broadway 2016</p>
+    <div class="mainbody">
+      <h3>Portfolio</h3>
+      <p>Coming Soon</p>
+      <h3>Team</h3>
+      <p>We're Hiring!</p>
+      <h3>Contact</h3>
+      <p>Phone: (555)-555-5555 </br></br>Email: test@example.com </br></br>Twitter: @test</p>
     </div>
-    <div id=footer>
-        <ul>
+    <div id="footer">
+      <p class="copy">©Broadway 2016</p>
+        <ul class="foot_nav">
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Work</a></li>
