--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
   </head>
   <body>
     <div id="header">
-      <h1 class="header">Broadway Design</h1></br>
-      <div id="topNav">
-        <ul class="mainlist">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Work</a></li>
-            <li><a href="#">Team</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-      </div>
+      <h1 class="title">Broadway Design</h1></br>
+      <ul class="mainlist">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Work</a></li>
+          <li><a href="#">Team</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
     </div>
     <div class="mainbody">
       <h2>Our Process</h2></br>
@@ -42,7 +40,7 @@
       <p>Phone: (555)-555-5555 </br></br>Email: test@example.com </br></br>Twitter: @test</p>
     </div>
     <div id="footer">
-      <p class="copy">©Broadway 2016</p>
+      <p class="copywright">©Broadway 2016</p>
         <ul class="foot_nav">
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
